@@ -17,8 +17,10 @@ Version 6.2.0 - In development
     - Minor performance improvements to moving and filtering VDB points.
 
     Bug fixes:
-    - Fixed a bug in util::PagedArray that could produce a crash due to a race 
-      condution.
+    - Fixed a (rare) crash in util::PagedArray caused by the fact that std::vector
+      (unlike std::deque) does not allow mutiple threads to call operator[] while one thread
+      calls push_back. The last template argument of PageArray is now elimited
+      and PageTableT is set to std::deque.
     - Fixed a bug in tools::computeScalarPotential() that could produce
       a corrupt result due to invalid memory access.
       [Reported by Edwin Braun]
